1. Makes hero banner full bleed and responsive. 2. Fixes text alignment in between sections and p tags. 3. Adjusts mobile nav menu to fit into viewport.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,8 +221,8 @@ h1, h2, h3, h4, h5, h6 {
 /* Mobile Navigation */
 .mobile-nav-toggle {
   position: fixed;
-  right: 15px;
-  top: 15px;
+  right: 0;
+  top: 0;
   z-index: 9998;
   border: 0;
   background: none;
@@ -232,6 +232,8 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
   cursor: pointer;
   text-align: right;
+  background: #223b51;
+  padding: 25px 25px;
 }
 
 .mobile-nav-toggle i {
@@ -240,9 +242,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .mobile-nav {
   position: fixed;
-  top: 55px;
+  top: 100px;
   right: 15px;
-  bottom: 15px;
+  bottom: auto;
   left: 15px;
   z-index: 9999;
   overflow-y: auto;
@@ -346,8 +348,26 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   padding: 0 0 0 0;
-  background: #213b52;
-  background: linear-gradient(180deg, #213b52 0%, #213c54 35%, #204564 100%);
+  background: url('../img-school/background-banner.jpg') no-repeat scroll transparent;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+}
+
+#hero .hero__mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  background: #333;
+  opacity: .4;
+}
+
+#hero .hero__content {
+  margin: 12% 0;
+  z-index: 2;
 }
 
 #hero h1 {
@@ -355,7 +375,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: #d2e0ed;
+  color: #fff;
   font-family: "Poppins", sans-serif;
 }
 
@@ -379,8 +399,16 @@ h1, h2, h3, h4, h5, h6 {
   background: transparent;
   color: #fff;
 }
+@media (max-width: 1199px) {
+  #hero .hero__content {
+    margin: 6% 0;
+  }
+}
 
 @media (max-width: 991px) {
+  #hero .hero__content {
+    margin: 0;
+  }
   #hero .hero-img {
     text-align: center;
   }
@@ -391,8 +419,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 768px) {
   #hero {
-    -moz-text-align-last: center;
-    text-align-last: center;
+    text-align: center;
   }
   #hero h1 {
     font-size: 28px;
@@ -544,9 +571,6 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
-.about .content {
-  padding: 30px 0;
-}
 
 .about .content h3 {
   font-weight: 700;
@@ -1155,6 +1179,7 @@ section {
   box-shadow: 0 0 30px rgba(214, 215, 216, 0.6);
   padding: 20px 0 30px 0;
   background: #fff;
+  height: 100%;
 }
 
 .contact .info-box i {
